--- a/.github/workflows/scrape-fishing-points.yml
+++ b/.github/workflows/scrape-fishing-points.yml
@@ -101,7 +101,7 @@ jobs:
       if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ${{ steps.gpx-file.outputs.gpx_file }}
@@ -112,7 +112,7 @@ jobs:
       if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ${{ steps.json-file.outputs.json_file }}
